--- a/templates/inventory_show.html
+++ b/templates/inventory_show.html
@@ -8,6 +8,9 @@
     <h2><a href='/store/{{ product._id }}'>{{product.name}}</a></h2>
     <h3>{{product.description}}</h3>
     <h5>${{product.price}}</h5>
+    <form action="/store/{{ product._id }}" method="POST">
+        <input type="submit" value="Add to cart" />
+    </form>
     <br>
 {% endfor %}
 
