--- a/templates/product_show.html
+++ b/templates/product_show.html
@@ -10,4 +10,11 @@
     <h3>Product is running low on supply!</h3>
 {% endif %}
 
+<form action="/store/{{ product._id }}" method="POST">
+    <input type="submit" value="Add to cart" />
+</form>
+
+
+
+
 {% endblock %}
