--- a/templates/cart_show.html
+++ b/templates/cart_show.html
@@ -9,6 +9,11 @@
     <h2>{{ product.name }}</h2>
     <h3>{{ product.description }}</h3>
     <h5>${{ product.price }}</h5>
+
+    <p><form method='POST' action='/store/cart/{{ product._id }}'>
+        <input type='hidden' name='_method' value='DELETE'>
+        <button type='submit'>Delete</button>
+    </form></p>
 {% endfor %}
 
 {% endblock %}
