--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,1 +1,37 @@
-<a href='/store/cart'>Cart ({{ cart_size }})</a>
+<!--
+
+<nav class='navbar navbar-default'>
+    <div class='container-fluid'>
+        <div class='navbar-header'>
+            <a class='navbar-brand' href='/'>
+                CoolGoods
+            </a>
+        </div>
+        <a href="/store/socks">Socks</a>
+        <a href="/store/shirts">Shirts</a>
+
+        <ul class="nav navbar">
+          <li style="padding-right: 20px"><a href="/store/socks">Socks</a></li>
+          <li style="padding-right: 20px"><a href="/store/shirts">Shirts</a></li>
+          <li style="padding-right: 20px"><a href="/store/hoodies">Hoodies</a></li>
+        </ul>
+
+        <div class='pull-right'>
+            <a href='/store/cart' class='btn btn-success navbar-btn'>Cart ({{ cart_size }})</a>
+        </div>
+    </div>
+</nav>
+
+-->
+
+<nav class="navbar navbar-default" style='margin-bottom: 0px'>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">CoolGoods</a>
+    </div>
+
+    
+
+
+  </div>
+</nav>
