--- a/templates/product_show.html
+++ b/templates/product_show.html
@@ -7,6 +7,9 @@
 <a href="/">Back to home</a>
 
 <h1>{{ product.name }}</h1>
+
+<img src={{ product.pic_path }} alt={{ product.name }}>
+
 <h3>{{ product.description }}</h3>
 <h5>${{ product.price }}</h5>
 
