--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,17 @@
 <head>
     <meta charset='utf-8'>
     <title>CoolGoods</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 </head>
 
-{% include "partials/navbar.html" %}
+<body>
+    {% include "partials/navbar.html" %}
 
-{% block content %} {% endblock %}
+    {% block content %} {% endblock %}
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</body>
 
 </html>
