--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -25,13 +25,13 @@
 -->
 
 <nav class="navbar navbar-default" style='margin-bottom: 0px'>
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">CoolGoods</a>
+    <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">CoolGoods</a>
+        </div>
+
+        <div class='pull-right'>
+            <a href='/store/cart' class='btn btn-success navbar-btn'>Cart ({{ cart_size }})</a>
+        </div>
     </div>
-
-    
-
-
-  </div>
 </nav>
