--- a/templates/inventory_show.html
+++ b/templates/inventory_show.html
@@ -9,25 +9,8 @@
     </div>
 </div>
 
-<div class="container">
-    <div class="row text-center">
-        {% for product in products %}
-        <div class="col-md-12 text-center">
-            <div class="panel panel-info">
-                <div class="panel-heading"><h2><a href='/store/{{ product._id }}'>{{product.name}}</a></h2></div>
-                <div class="panel-body">
-                    <img src="{{ product.pic_path }}" style="width: 10%">
-                    <h3>{{product.description}}</h3>
-                    <h5>${{product.price}}</h5>
-                    <form action="/store/{{ product._id }}" method="POST">
-                        <input type="submit" value="Add to cart" />
-                    </form>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
-    </div>
-</div>
+
+{% include "partials/general_product_show.html" %}
 
 
 {% endblock %}
