--- a/templates/product_show.html
+++ b/templates/product_show.html
@@ -2,9 +2,28 @@
 
 {% block content %}
 
-<br><br>
+<div class="container" style="padding-top:20px">
+    <!-- <a href="/">Back to home</a> -->
+    <div class="row text-center">
+        <div class="panel panel-info">
+            <div class="panel-heading"><h2><a href='/store/{{ product._id }}'>{{product.name}}</a></h2></div>
+            <div class="panel-body">
+                <img src="{{ product.pic_path }}" style="width: 10%">
+                <h3>{{product.description}}</h3>
+                {% if product.inventory <= 10 %}
+                    <h3>Product is running low on supply!</h3>
+                {% endif %}
+                <h5>${{product.price}}</h5>
+                <form action="/store/{{ product._id }}" method="POST">
+                    <input type="submit" class="btn btn-success" value="Add to cart"/>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-<a href="/">Back to home</a>
+
+<!--
 
 <h1>{{ product.name }}</h1>
 
@@ -12,18 +31,16 @@
 
 <h3>{{ product.description }}</h3>
 <h5>${{ product.price }}</h5>
-
 <h4>{{ product.inventory }} of these left!</h4>
 
-{% if product.inventory <= 10 %}
-    <h3>Product is running low on supply!</h3>
-{% endif %}
+
+
 
 <form action="/store/{{ product._id }}" method="POST">
     <input type="submit" value="Add to cart" />
 </form>
 
-
+-->
 
 
 {% endblock %}
