--- a/templates/cart_show.html
+++ b/templates/cart_show.html
@@ -10,7 +10,25 @@
     </div>
 </div>
 
-{% include "partials/general_product_show.html" %}
 
+<div class="container" style="background-color: #85DCB">
+    <div class="row text-center" style="padding-top:20px">
+        {% for product in product_list %}
+        <div class="col-md-12 text-center">
+            <div class="panel panel-info">
+                <div class="panel-heading"><h2><a href='/store/{{ product._id }}'>{{product.name}}</a></h2></div>
+                <div class="panel-body">
+                    <img src="{{ product.pic_path }}" style="width: 10%">
+                    <h3>{{product.description}}</h3>
+                    <h5>${{product.price}}</h5>
+                    <form action="/store/cart/{{ product._id }}" method="POST">
+                        <input type="submit" class="btn btn-success" value="Delete from Cart" />
+                    </form>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock %}
