--- a/templates/product_show.html
+++ b/templates/product_show.html
@@ -20,6 +20,28 @@
             </div>
         </div>
     </div>
+    <div class="row text-center">
+        <div class="panel panel-warning">
+            <div class="panel-heading"><h2>Leave a review!</h2></div>
+            <div class="panel-body">
+                {% include "partials/review_form.html" %}
+            </div>
+        </div>
+    </div>
+
+    <div class="row text-center">
+        <div class="panel panel-success">
+            <div class="panel-heading"><h2>Reviews ({{ num_of_reviews }})</h2></div>
+            <div class="panel-body">
+                {% for review in reviews %}
+                    <h3>{{ review.name }} wrote: </h3>
+                    <p>{{ review.content }}</p>
+                    <br>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
