[fix][addition] Fixed some bugs and added checkout option in cart

--- a/templates/cart_show.html
+++ b/templates/cart_show.html
@@ -7,6 +7,9 @@
     <div class="row">
         <h1 style="color: #FFFFFF">Your Cart:</h1>
         <h5>You know you want it ;)</h5>
+        <form action="/store/cart/checkout" style="padding-top:15px">
+            <input type="submit" class="btn btn-info" value="Checkout" />
+        </form>
     </div>
 </div>
 
