--- a/templates/partials/general_product_show.html
+++ b/templates/partials/general_product_show.html
@@ -7,6 +7,9 @@
                 <div class="panel-body">
                     <img src="{{ product.pic_path }}" style="width: 10%">
                     <h3>{{product.description}}</h3>
+                    {% if product.inventory <= 10 %}
+                        <span class="label label-danger">Product is running low on supply!</span>
+                    {% endif %}
                     <h5>${{product.price}}</h5>
                     <form action="/store/{{ product._id }}" method="POST">
                         <input type="submit" class="btn btn-success" value="Add to cart" />
