[addition] Added product out of stock functionality

--- a/templates/partials/general_product_show.html
+++ b/templates/partials/general_product_show.html
@@ -1,22 +1,32 @@
 <div class="container" style="background-color: #85DCB">
     <div class="row text-center" style="padding-top:20px">
-        {% for product in product_list %}
-        <div class="col-md-12 text-center">
-            <div class="panel panel-info">
-                <div class="panel-heading"><h2><a href='/store/{{ product._id }}'>{{product.name}}</a></h2></div>
-                <div class="panel-body">
-                    <img src="{{ product.pic_path }}" style="width: 10%">
-                    <h3>{{product.description}}</h3>
-                    {% if product.inventory <= 10 %}
-                        <span class="label label-danger">Product is running low on supply!</span>
-                    {% endif %}
-                    <h5>${{product.price}}</h5>
-                    <form action="/store/{{ product._id }}" method="POST">
-                        <input type="submit" class="btn btn-success" value="Add to cart" />
-                    </form>
+        <div class="product-grid">
+
+            {% for product in product_list %}
+            <div class="col-md-12 text-center">
+                <div class="panel panel-info">
+                    <div class="panel-heading"><h2><a href='/store/{{ product._id }}'>{{product.name}}</a></h2></div>
+                    <div class="panel-body">
+                        <img src="{{ product.pic_path }}" style="width: 10%">
+                        <h3>{{product.description}}</h3>
+                        {% if product.inventory <= 0 %}
+                            <span class="label label-danger">Product is out of stock</span>
+                        {% elif product.inventory <= 10 %}
+                            <span class="label label-warning">Product is running low on supply!</span>
+                        {% endif %}
+
+                        <h5>${{product.price}}</h5>
+
+                        {% if product.inventory > 0 %}
+                            <form action="/store/{{ product._id }}" method="POST">
+                                <input type="submit" class="btn btn-success" value="Add to cart" />
+                            </form>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
+            {% endfor %}
+
         </div>
-        {% endfor %}
     </div>
 </div>
